# network-probe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  flake.nix  kind.yaml  rust-toolchain.toml
client/: Cargo.toml  Dockerfile  pod.json
client/kubernetes/: deploy.yaml
client/src/: main.rs
container-meta/: Cargo.toml
container-meta/src/: lib.rs
network-probe/: Cargo.toml  Dockerfile  build.rs
network-probe/kubernetes/: deploy.yaml
network-probe/src/: main.rs
network-probe/src/bpf/: egress.bpf.c  event.h  reporter_headers.h
network-probe/src/init/: mod.rs
src/: main.rs
src/bpf/: egress.bpf.c  event.h
