[package]
name = "network-probe"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only or MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
libbpf-rs = "0.23.3"
libc = "0.2.155"
plain = "0.2.3"

[build-dependencies]
libbpf-cargo = "0.23.3"
