[package]
name = "network-probe"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only or MPL-2.0"

[[bin]]
name = "network-probe"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.8", features = ["derive"] }
libbpf-rs = "0.23.3"
libc = "0.2.155"
plain = "0.2.3"
tokio = { version = "1.38.0", features = ["fs", "full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.6"
opentelemetry = { version = "0.24.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24.0", features = ["metrics"] }
opentelemetry-prometheus = "0.17.0"
prometheus = "0.13.4"
kube = { version = "0.95.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
ipnet = "2.10.0"
futures = "0.3.30"

[build-dependencies]
libbpf-cargo = "0.23.3"
